@YELP_HELP_RULES@

HELP_ID = mate-panel

HELP_FILES =            \
	index.docbook       \
	legal.xml           \
	goseditmainmenu.xml \
	gosoverview.xml     \
	gospanel.xml

HELP_MEDIA =								\
	figures/force_quit.png					\
	figures/four_hide_button.png			\
	figures/lockscreen_icon.png				\
	figures/logout_icon.png					\
	figures/menu_bar_applet.png				\
	figures/notification_area_icon.png		\
	figures/open_drawer.png					\
	figures/openwindows_menu.png			\
	figures/panel_object_popup_menu.png		\
	figures/run_button.png					\
	figures/sample_applet.png				\
	figures/searchtool_button.png			\
	figures/show_desktop_button.png			\
	figures/workspace_switcher_applet.png

HELP_LINGUAS = ar bg cs de el es eu fi fr gl hu id it ja ko oc pa pt pt_BR ru sv th uk zh_CN

-include $(top_srcdir)/git.mk
