icon_FILES =				\
	clock-face-large.svg		\
	clock-face-small.svg		\
	clock-face-small-morning.svg	\
	clock-face-small-day.svg	\
	clock-face-small-evening.svg	\
	clock-face-small-night.svg	\
	clock-map.png			\
	clock-map-location-marker.png	\
	clock-map-location-current.png	\
	clock-map-location-hilight.png

EXTRA_DIST = 		\
	clock-map.svg	\
	$(icon_FILES)

MAINTAINERCLEANFILES = Makefile.in

-include $(top_srcdir)/git.mk
